init: 添加MQ相关伪代码

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -31,4 +31,7 @@ spring:
       ssl:
         enabled: false
 
-
+rocketmq:
+  name-server: 127.0.0.1:9876
+  consumer:
+    group: ws-consumer-group
